--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.1",
+    "nodemailer": "^6.8.0",
     "shortid": "^2.2.16",
     "valid-url": "^1.0.9"
   },
